[package]
name = "timestamp"
version = "0.1.1"
description = "A program that appends a timestamp to stdin"
authors = ["Kyle Clemens <jkc.clemens@gmail.com>"]
repository = "https://github.com/jkcclemens/timestamp"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
time = "0.1.35"

[profile.release]
lto = true
panic = "abort"
